--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -6,24 +6,24 @@
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <link rel="shortcut icon" type="../image/x-icon" href="/favicon.ico">
   <title>Erin Gallup | User Focused Product Design</title>
-  <link rel="stylesheet" type="text/css" href="../../new site/css/screenstyle.css" />
-  <link rel="stylesheet" type="text/css" href="../../new site/css/screen_layout_large.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:795px) and (max-width:901px)" href="../../new site/css/screen_layout_medium.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:710px) and (max-width:794px)" href="../../new site/css/screen_layout_small.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:480px)" href="../../new site/css/screen_layout_phone.css" />
+  <link rel="stylesheet" type="text/css" href="../css/screenstyle.css" />
+  <link rel="stylesheet" type="text/css" href="../css/screen_layout_large.css" />
+  <link rel="stylesheet" type="text/css" media="only screen and (min-width:795px) and (max-width:901px)" href="../css/screen_layout_medium.css" />
+  <link rel="stylesheet" type="text/css" media="only screen and (min-width:710px) and (max-width:794px)" href="../css/screen_layout_small.css" />
+  <link rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:480px)" href="../css/screen_layout_phone.css" />
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <script src="../../new site/html/js/jquery-1.8.3.min.js" type="text/javascript"></script>
-  <script src="../../new site/html/js/cycle.js" type="text/javascript"></script>
-  <script src="../../new site/html/js/Jssor.Slider.Min.js" type="text/javascript"></script>
-  <script src="../../new site/html/js/jquery.flexslider-min.js" type="text/javascript"></script>
+  <script src="../html/js/jquery-1.8.3.min.js" type="text/javascript"></script>
+  <script src="../html/js/cycle.js" type="text/javascript"></script>
+  <script src="../html/js/Jssor.Slider.Min.js" type="text/javascript"></script>
+  <script src="../html/js/jquery.flexslider-min.js" type="text/javascript"></script>
 </head>
 <body class="clearfix">
   <div class="header_container clearfix">
     <div class="header">
-      <h1><a href="../../new site/index.html">e.g.</a></h1>
-      <a class="headshotsub" href="#"><img src="../../new site/images/headshot.png"><p>about</p></a>
+      <h1><a href="../index.html">e.g.</a></h1>
+      <a class="headshotsub" href="#"><img src="../images/headshot.png"><p>about</p></a>
     </div>
   </div>
   <div class="photo_container subphoto_rarelead clearfix">
