--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <title>Erin Gallup | User Focused Product Design</title>
-  <link rel="stylesheet" type="text/css" href="../new site/css/screenstyle.css" />
-  <link rel="stylesheet" type="text/css" href="../new site/css/screen_layout_large.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:795px) and (max-width:901px)" href="../new site/css/screen_layout_medium.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:710px) and (max-width:794px)" href="../new site/css/screen_layout_small.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:480px)" href="../new site/css/screen_layout_phone.css" />
+  <link rel="stylesheet" type="text/css" href="css/screenstyle.css" />
+  <link rel="stylesheet" type="text/css" href="css/screen_layout_large.css" />
+  <link rel="stylesheet" type="text/css" media="only screen and (min-width:795px) and (max-width:901px)" href="css/screen_layout_medium.css" />
+  <link rel="stylesheet" type="text/css" media="only screen and (min-width:710px) and (max-width:794px)" href="css/screen_layout_small.css" />
+  <link rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:480px)" href="css/screen_layout_phone.css" />
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <script src="../new site/js/jquery-1.8.3.min.js" type="text/javascript"></script>
-  <script src="../new site/js/cycle.js" type="text/javascript"></script>
-  <script src="../new site/js/Jssor.Slider.Min.js" type="text/javascript"></script>
-  <script src="../new site/js/jquery.flexslider-min.js" type="text/javascript"></script>
+  <script src="js/jquery-1.8.3.min.js" type="text/javascript"></script>
+  <script src="js/cycle.js" type="text/javascript"></script>
+  <script src="js/Jssor.Slider.Min.js" type="text/javascript"></script>
+  <script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
 </head>
 <body class="clearfix">
   <div class="header_container clearfix">
     <div class="header">
       <h1>e.g.</h1>
-      <a class="headshot" href="#"><img src="../new site/images/headshot.png"><p>about</p></a>
+      <a class="headshot" href="#"><img src="images/headshot.png"><p>about</p></a>
     </div>
   </div>
   <div class="layout_container clearfix">
@@ -35,27 +35,27 @@
     <div class="homethumbs clearfix">
       <a class="thumb" href="#">
         <span class="thumbwords">bitcoin investors</span>
-        <span class="thumbimage" style="background-image: url(../new%20site/images/home_bitcoin.png);"></span>
+        <span class="thumbimage" style="background-image: url(images/home_bitcoin.png);"></span>
       </a>
       <a class="thumb" href="#">
         <span class="thumbwords">creative learners</span>
-        <span class="thumbimage" style="background-image: url(../new%20site/images/home_creativelive.png);"></span>
+        <span class="thumbimage" style="background-image: url(images/home_creativelive.png);"></span>
       </a>
       <a class="thumb" href="#">
         <span class="thumbwords">web publishers</span>
-        <span class="thumbimage" style="background-image: url(../new%20site/images/home_quantcast.png);"></span>
+        <span class="thumbimage" style="background-image: url(images/home_quantcast.png);"></span>
       </a>
-      <a class="thumb" href="../new site/html/rarelead.html">
+      <a class="thumb" href="html/rarelead.html">
         <span class="thumbwords">passive job seekers</span>
-        <span class="thumbimage" style="background-image: url(../new%20site/images/home_rarelead.png);"></span>
+        <span class="thumbimage" style="background-image: url(images/home_rarelead.png);"></span>
       </a>
       <a class="thumb" href="#">
         <span class="thumbwords">airbnb power hosts</span>
-        <span class="thumbimage" style="background-image: url(../new%20site/images/home_bnbledger.png);"></span>
+        <span class="thumbimage" style="background-image: url(images/home_bnbledger.png);"></span>
       </a>
       <a class="thumb" href="#">
         <span class="thumbwords">the money curious</span>
-        <span class="thumbimage" style="background-image: url(../new%20site/images/home_currencycheatsheet.png);"></span>
+        <span class="thumbimage" style="background-image: url(images/home_currencycheatsheet.png);"></span>
       </a>
     </div>
 
