--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -11,13 +11,8 @@
   <link rel="stylesheet" type="text/css" media="only screen and (min-width:795px) and (max-width:901px)" href="../css/screen_layout_medium.css" />
   <link rel="stylesheet" type="text/css" media="only screen and (min-width:710px) and (max-width:794px)" href="../css/screen_layout_small.css" />
   <link rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:480px)" href="../css/screen_layout_phone.css" />
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  <script src="../html/js/jquery-1.8.3.min.js" type="text/javascript"></script>
-  <script src="../html/js/cycle.js" type="text/javascript"></script>
-  <script src="../html/js/Jssor.Slider.Min.js" type="text/javascript"></script>
-  <script src="../html/js/jquery.flexslider-min.js" type="text/javascript"></script>
+  <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+  <script src="../js/app.js" type="text/javascript"></script>
 </head>
 <body class="clearfix">
   <div class="header_container clearfix">
@@ -26,12 +21,13 @@
       <a class="headshotsub" href="#"><img src="../images/headshot.png"><p>about</p></a>
     </div>
   </div>
-  <div class="photo_container subphoto_rarelead clearfix">
+  <div class="photo_container clearfix">
+    <div class="subphoto subphoto_rarelead"></div>
     <div class="whitecard">
       <div class="subcard">
         <h4>an app to quietly help</h4>
         <h5>passive job seekers</h5>
-        <h6>view slides</h6>
+        <h6 class="view-slides clickable">view slides</h6>
       </div>
     </div>
   </div>
