--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -11,25 +11,40 @@
   <link rel="stylesheet" type="text/css" media="only screen and (min-width:795px) and (max-width:901px)" href="../css/screen_layout_medium.css" />
   <link rel="stylesheet" type="text/css" media="only screen and (min-width:710px) and (max-width:794px)" href="../css/screen_layout_small.css" />
   <link rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:480px)" href="../css/screen_layout_phone.css" />
-  <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
-  <script src="../js/app.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick-theme.css"/>
 </head>
 <body class="clearfix">
-  <div class="header_container clearfix">
-    <div class="header">
-      <h1><a href="../index.html">e.g.</a></h1>
-      <a class="headshotsub" href="#"><img src="../images/headshot.png"><p>about</p></a>
+
+<div class="header_container clearfix">
+  <div class="header">
+    <h1><a href="../index.html">e.g.</a></h1>
+    <a class="headshotsub" href="#"><img src="../images/headshot.png"><p>about</p></a>
+  </div>
+</div>
+<div class="photo_container clearfix">
+  <div class="subphoto subphoto_rarelead"></div>
+  <div class="whitecard">
+    <div class="subcard">
+      <h4>an app to quietly help</h4>
+      <h5>passive job seekers</h5>
+      <h6 class="view-slides clickable">view slides</h6>
     </div>
   </div>
-  <div class="photo_container clearfix">
-    <div class="subphoto subphoto_rarelead"></div>
-    <div class="whitecard">
-      <div class="subcard">
-        <h4>an app to quietly help</h4>
-        <h5>passive job seekers</h5>
-        <h6 class="view-slides clickable">view slides</h6>
-      </div>
+</div>
+<div class="modal">
+  <div class="modal-body">
+    <div class="slideshow">
+      <div><img class="responsive" src="//eringallup.info/coinledger/1.png"></div>
+      <div><img class="responsive" src="//eringallup.info/coinledger/2.png"></div>
+      <div><img class="responsive" src="//eringallup.info/coinledger/3.png"></div>
     </div>
   </div>
+</div>
+
+<script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js"></script>
+<script src="../js/app.js" type="text/javascript"></script>
 </body>
 </html>
