starting to implement a pretty slideshow

--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:480px)" href="../css/screen_layout_phone.css" />
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick-theme.css"/>
 </head>
 <body class="clearfix">
 
@@ -25,20 +24,41 @@
 </div>
 <div class="photo_container clearfix">
   <div class="subphoto subphoto_rarelead"></div>
-  <div class="whitecard">
+  <div class="whitecard view-slides clickable">
     <div class="subcard">
       <h4>an app to quietly help</h4>
       <h5>passive job seekers</h5>
-      <h6 class="view-slides clickable">view slides</h6>
+      <h6>view slides</h6>
     </div>
   </div>
-</div>
-<div class="modal">
-  <div class="modal-body">
-    <div class="slideshow">
-      <div><img class="responsive" src="//eringallup.info/coinledger/1.png"></div>
-      <div><img class="responsive" src="//eringallup.info/coinledger/2.png"></div>
-      <div><img class="responsive" src="//eringallup.info/coinledger/3.png"></div>
+  <div class="modal">
+    <div class="modal-body">
+      <div class="slideshow">
+        <div>
+          <div class="slide-left">
+            <h3>Home Page</h3>
+            <hr>
+            <p>The redesigned homepage allows for easy and obvious account creation. It also provides current bitcoin prices.</p>
+          </div>
+          <img class="responsive" src="//eringallup.info/coinledger/1.png">
+        </div>
+        <div>
+          <div class="slide-left">
+            <h3>Other Page</h3>
+            <hr>
+            <p>The other homepage allows for easy and creation. It also provides current bitcoin prices.</p>
+          </div>
+          <img class="responsive" src="//eringallup.info/coinledger/2.png">
+        </div>
+        <div>
+          <div class="slide-left">
+            <h3>Best Page</h3>
+            <hr>
+            <p>The redesigned bestie creation. It also provides current bitcoin prices.</p>
+          </div>
+          <img class="responsive" src="//eringallup.info/coinledger/3.png">
+        </div>
+      </div>
     </div>
   </div>
 </div>
