--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" type="text/css" media="only screen and (min-width:795px) and (max-width:901px)" href="../css/screen_layout_medium.css" />
   <link rel="stylesheet" type="text/css" media="only screen and (min-width:710px) and (max-width:794px)" href="../css/screen_layout_small.css" />
   <link rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:480px)" href="../css/screen_layout_phone.css" />
+
+  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
 </head>
@@ -36,7 +38,7 @@
       <div class="slideshow">
         <div>
           <div class="slide-left">
-            <h3>Home Page</h3>
+            <h4>Home Page</h4>
             <hr>
             <p>The redesigned homepage allows for easy and obvious account creation. It also provides current bitcoin prices.</p>
           </div>
@@ -44,7 +46,7 @@
         </div>
         <div>
           <div class="slide-left">
-            <h3>Other Page</h3>
+            <h4>Other Page</h4>
             <hr>
             <p>The other homepage allows for easy and creation. It also provides current bitcoin prices.</p>
           </div>
@@ -52,7 +54,7 @@
         </div>
         <div>
           <div class="slide-left">
-            <h3>Best Page</h3>
+            <h4>Best Page</h4>
             <hr>
             <p>The redesigned bestie creation. It also provides current bitcoin prices.</p>
           </div>
