--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -7,10 +7,10 @@
   <link rel="shortcut icon" type="../image/x-icon" href="/favicon.ico">
   <title>Erin Gallup | User Focused Product Design</title>
   <link rel="stylesheet" type="text/css" href="../css/screenstyle.css" />
-  <link rel="stylesheet" type="text/css" href="../css/screen_layout_large.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:795px) and (max-width:901px)" href="../css/screen_layout_medium.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:710px) and (max-width:794px)" href="../css/screen_layout_small.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:480px)" href="../css/screen_layout_phone.css" />
+  <link rel="stylesheet" type="text/css" href="../css/screen-layout-large.css" />
+  <link rel="stylesheet" type="text/css" media="only screen and (min-width:795px) and (max-width:901px)" href="../css/screen-layout-medium.css" />
+  <link rel="stylesheet" type="text/css" media="only screen and (min-width:710px) and (max-width:794px)" href="../css/screen-layout-small.css" />
+  <link rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:480px)" href="../css/screen-layout-phone.css" />
 
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -18,14 +18,14 @@
 </head>
 <body class="clearfix">
 
-<div class="header_container clearfix">
+<div class="header-container clearfix">
   <div class="header">
     <h1><a href="../index.html">e.g.</a></h1>
     <a class="headshotsub" href="#"><img src="../images/headshot.png"><p>about</p></a>
   </div>
 </div>
-<div class="photo_container clearfix">
-  <div class="subphoto subphoto_rarelead"></div>
+<div class="photo-container clearfix">
+  <div class="subphoto subphoto-rarelead"></div>
   <div class="whitecard view-slides clickable">
     <div class="subcard">
       <h4>an app to quietly help</h4>
@@ -63,6 +63,9 @@
       </div>
     </div>
   </div>
+</div>
+
+<div class="body-container">
 </div>
 
 <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
