--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -8,12 +8,7 @@
   <title>Erin Gallup | User Focused Product Design</title>
   <link rel="stylesheet" type="text/css" href="../css/screenstyle.css" />
   <link rel="stylesheet" type="text/css" href="../css/screen-layout-large.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:795px) and (max-width:901px)" href="../css/screen-layout-medium.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:710px) and (max-width:794px)" href="../css/screen-layout-small.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:480px)" href="../css/screen-layout-phone.css" />
-
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
 </head>
 <body class="clearfix">
@@ -27,11 +22,9 @@
 <div class="photo-container clearfix">
   <div class="subphoto subphoto-rarelead"></div>
   <div class="whitecard view-slides clickable">
-    <div class="subcard">
-      <h4>an app to quietly help</h4>
-      <h5>passive job seekers</h5>
-      <h6>view slides</h6>
-    </div>
+    <h4>an app to quietly help</h4>
+    <h5>passive job seekers</h5>
+    <h6>view slides</h6>
   </div>
   <div class="modal">
     <div class="modal-body">
@@ -66,6 +59,15 @@
 </div>
 
 <div class="body-container">
+  <div class="body-left">
+    <div class="body-title">
+      <h3>Who are</h3>
+      <h4>passive job seekers?</h4>
+    </div>
+  </div>
+  <div class="body-right">
+    <p>The redesigned homepage is amazing.</p>
+  </div>
 </div>
 
 <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
