--- a/index.html
+++ b/index.html
@@ -7,26 +7,17 @@
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <title>Erin Gallup | User Focused Product Design</title>
   <link rel="stylesheet" type="text/css" href="css/screenstyle.css" />
-  <link rel="stylesheet" type="text/css" href="css/screen_layout_large.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:795px) and (max-width:901px)" href="css/screen_layout_medium.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:710px) and (max-width:794px)" href="css/screen_layout_small.css" />
-  <link rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:480px)" href="css/screen_layout_phone.css" />
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  <script src="js/jquery-1.8.3.min.js" type="text/javascript"></script>
-  <script src="js/cycle.js" type="text/javascript"></script>
-  <script src="js/Jssor.Slider.Min.js" type="text/javascript"></script>
-  <script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
+  <link rel="stylesheet" type="text/css" href="css/screen-layout-large.css" />
+  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 </head>
 <body class="clearfix">
-  <div class="header_container clearfix">
+  <div class="header-container clearfix">
     <div class="header">
       <h1>e.g.</h1>
       <a class="headshot" href="#"><img src="images/headshot.png"><p>about</p></a>
     </div>
   </div>
-  <div class="layout_container clearfix">
+  <div class="layout-container clearfix">
     <div class="hometitle clearfix">
       <h2>made<span class="titlecap">for</span>use</h2>
       <p class="subtitle">product design that puts the user first</p>
@@ -60,5 +51,8 @@
     </div>
 
   </div>
+
+<script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+<script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
