--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="../css/screenstyle.css" />
   <link rel="stylesheet" type="text/css" href="../css/screen-layout-large.css" />
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
 </head>
 <body class="clearfix">
 
@@ -35,7 +35,7 @@
             <hr>
             <p>The redesigned homepage allows for easy and obvious account creation. It also provides current bitcoin prices.</p>
           </div>
-          <img class="responsive" src="//eringallup.info/coinledger/1.png">
+          <img class="responsive" src="http://eringallup.info/coinledger/1.png">
         </div>
         <div>
           <div class="slide-left">
@@ -43,7 +43,7 @@
             <hr>
             <p>The other homepage allows for easy and creation. It also provides current bitcoin prices.</p>
           </div>
-          <img class="responsive" src="//eringallup.info/coinledger/2.png">
+          <img class="responsive" src="http://eringallup.info/coinledger/2.png">
         </div>
         <div>
           <div class="slide-left">
@@ -51,7 +51,7 @@
             <hr>
             <p>The redesigned bestie creation. It also provides current bitcoin prices.</p>
           </div>
-          <img class="responsive" src="//eringallup.info/coinledger/3.png">
+          <img class="responsive" src="http://eringallup.info/coinledger/3.png">
         </div>
       </div>
     </div>
@@ -71,7 +71,7 @@
 </div>
 
 <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js"></script>
+<script src="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js" type="text/javascript"></script>
 <script src="../js/app.js" type="text/javascript"></script>
 </body>
 </html>
