various visual changes to nav & content

--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -31,7 +31,7 @@
       <div class="slideshow">
         <div>
           <div class="slide-left">
-            <h4>Home Page</h4>
+            <h4>home page</h4>
             <hr>
             <p>The redesigned homepage allows for easy and obvious account creation. It also provides current bitcoin prices.</p>
           </div>
@@ -39,7 +39,7 @@
         </div>
         <div>
           <div class="slide-left">
-            <h4>Other Page</h4>
+            <h4>other page</h4>
             <hr>
             <p>The other homepage allows for easy and creation. It also provides current bitcoin prices.</p>
           </div>
@@ -47,7 +47,7 @@
         </div>
         <div>
           <div class="slide-left">
-            <h4>Best Page</h4>
+            <h4>best page</h4>
             <hr>
             <p>The redesigned bestie creation. It also provides current bitcoin prices.</p>
           </div>
@@ -66,7 +66,9 @@
     </div>
   </div>
   <div class="body-right">
-    <p>The redesigned homepage is amazing.</p>
+    <p>The redesigned homepage is amazing. Last month's earthquake brought much of Kathmandu's historic Durbar Square, a World Heritage Site, tumbling to the ground. Nepal's showcase temples and palaces were reduced to ruins. But save for a few cracks, the home of Nepal's Living Goddess remained intact.
+
+Largely unknown to the outside world, the centuries-old institution of the child deity, the Kumari, is deeply embedded in the culture of Nepal. Young, beautiful, and decorous and even a glimpse of her is believed to bring good fortune.</p>
   </div>
 </div>
 
