changes to the slideshow and real text filling in

--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -29,30 +29,63 @@
   <div class="modal">
     <div class="modal-body">
       <div class="slideshow">
+
         <div>
           <div class="slide-left">
-            <h4>home page</h4>
+            <h4>the project</h4>
             <hr>
-            <p>The redesigned homepage allows for easy and obvious account creation. It also provides current bitcoin prices.</p>
+            <p>This project was a sketch to test out the concept of a 'Tinder for jobs'. The first task was to decide on a name and pull together a logo, which would give us a starting point for the design.</p>
+            <p>The name and logo refer to the rare opportunity, the &ldquo;rare bird&rdquo;.</p>
           </div>
-          <img class="responsive" src="http://eringallup.info/coinledger/1.png">
+          <img class="responsive" src="http://eringallup.info/name/logo.png">
         </div>
+
         <div>
           <div class="slide-left">
-            <h4>other page</h4>
+            <h4>the app : home</h4>
             <hr>
-            <p>The other homepage allows for easy and creation. It also provides current bitcoin prices.</p>
+            <p>The app is designed for the job seeker needing a low friction, discrete way of showing interest in new opportunities.
+            Upon sign up the user enters the url of their Linkedin profile, which allows the app to scan keywords from their experience to pre-qualify them for posted jobs. </p>
           </div>
-          <img class="responsive" src="http://eringallup.info/coinledger/2.png">
+          <img class="responsive" src="http://eringallup.info/name/screens/1.png">
         </div>
+
         <div>
           <div class="slide-left">
-            <h4>best page</h4>
+            <h4>the app : preferences</h4>
             <hr>
-            <p>The redesigned bestie creation. It also provides current bitcoin prices.</p>
+            <p>The seeker sets their preferences to filter their mandatory requirements like team size, commute time, company type and perks.</p>
           </div>
-          <img class="responsive" src="http://eringallup.info/coinledger/3.png">
+          <img class="responsive" src="http://eringallup.info/name/screens/3.png">
         </div>
+
+        <div>
+          <div class="slide-left">
+            <h4>the app : posted job</h4>
+            <hr>
+            <p>The user can then browse positions that are a match for them. A short, tidy overview area keeps descriptions succinct. </p>
+          </div>
+          <img class="responsive" src="http://eringallup.info/name/screens/4.png">
+        </div>
+
+        <div>
+          <div class="slide-left">
+            <h4>the app : posted job</h4>
+            <hr>
+            <p>Swiping gives more details of the team and office location. </p>
+          </div>
+          <img class="responsive" src="http://eringallup.info/name/screens/5.png">
+        </div>
+
+        <div>
+          <div class="slide-left">
+            <h4>the app : posted job</h4>
+            <hr>
+            <p>Instead of responsibilites, projects are listed to give the seeker a more exact idea of what they would be doing.</p>
+          </div>
+          <img class="responsive" src="http://eringallup.info/name/screens/6.png">
+        </div>
+
       </div>
     </div>
   </div>
@@ -66,9 +99,7 @@
     </div>
   </div>
   <div class="body-right">
-    <p>The redesigned homepage is amazing. Last month's earthquake brought much of Kathmandu's historic Durbar Square, a World Heritage Site, tumbling to the ground. Nepal's showcase temples and palaces were reduced to ruins. But save for a few cracks, the home of Nepal's Living Goddess remained intact.
-
-Largely unknown to the outside world, the centuries-old institution of the child deity, the Kumari, is deeply embedded in the culture of Nepal. Young, beautiful, and decorous and even a glimpse of her is believed to bring good fortune.</p>
+    <p>The passive job seeker is a skilled employee who is starting to feel that the next job is on the horizon. They are busy and do not have the time to comb job sites and wade through cryptic job descriptions. They only want to see the jobs that they'd leave their current job for. And most of all, they do not want to be approached by recruiters &ndash; unless  it is a true match.</p>
   </div>
 </div>
 
