--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -34,7 +34,7 @@
           <div class="slide-left">
             <h4>the project</h4>
             <hr>
-            <p>This project was a sketch to test out the concept of a 'Tinder for jobs'. The first task was to decide on a name and pull together a logo, which would give us a starting point for the design.</p>
+            <p>This project was a sketch to test out the concept of a &lsquo;Tinder for jobs&rsquo;. The first task was to decide on a name and pull together a logo, which would give us a starting point for the design.</p>
             <p>The name and logo refer to the rare opportunity, the &ldquo;rare bird&rdquo;.</p>
           </div>
           <img class="responsive" src="http://eringallup.info/name/logo.png">
@@ -70,7 +70,7 @@
 
         <div>
           <div class="slide-left">
-            <h4>the app : posted job</h4>
+            <h4>the app : team info</h4>
             <hr>
             <p>Swiping gives more details of the team and office location. </p>
           </div>
@@ -79,11 +79,65 @@
 
         <div>
           <div class="slide-left">
-            <h4>the app : posted job</h4>
+            <h4>the app : projects</h4>
             <hr>
             <p>Instead of responsibilites, projects are listed to give the seeker a more exact idea of what they would be doing.</p>
           </div>
           <img class="responsive" src="http://eringallup.info/name/screens/6.png">
+        </div>
+
+        <div>
+          <div class="slide-left">
+            <h4>the app : company info</h4>
+            <hr>
+            <p>Financial information and leadership links allow the user to browse deeper if they'd like to know more about the company.</p>
+          </div>
+          <img class="responsive" src="http://eringallup.info/name/screens/7.png">
+        </div>
+
+        <div>
+          <div class="slide-left">
+            <h4>the app : perks</h4>
+            <hr>
+            <p>Perks include the must-haves already selected by the seeker in preferences.</p>
+          </div>
+          <img class="responsive" src="http://eringallup.info/name/screens/8.png">
+        </div>
+
+        <div>
+          <div class="slide-left">
+            <h4>the site</h4>
+            <hr>
+            <p>Recruiters do much of the work at their desks. Therefore, the MVP would focus only on a desktop site where the recruiter would create their postings.</p>
+          </div>
+          <img class="responsive" src="http://eringallup.info/name/1.png">
+        </div>
+
+        <div>
+          <div class="slide-left">
+            <h4>the site: add job</h4>
+            <hr>
+            <p>The flow for adding a posting to the system.</p>
+          </div>
+          <img class="responsive" src="http://eringallup.info/name/2.png">
+        </div>
+
+        <div>
+          <div class="slide-left">
+            <h4>the site: add job</h4>
+            <hr>
+            <p>The flow for adding a posting to the system.</p>
+          </div>
+          <img class="responsive" src="http://eringallup.info/name/3.png">
+        </div>
+
+        <div>
+          <div class="slide-left">
+            <h4>the site: add job</h4>
+            <hr>
+            <p>The flow for adding a posting to the system.</p>
+          </div>
+          <img class="responsive" src="http://eringallup.info/name/4.png">
         </div>
 
       </div>
