updates with jimmy

--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -27,117 +27,142 @@
     <h6>view slides</h6>
   </div>
   <div class="modal">
+    <span class="close close-modal"></span>
     <div class="modal-body">
       <div class="slideshow">
 
         <div>
+          <div class="slide-right">
+            <img class="responsive center" src="http://eringallup.info/name/logo.png">
+          </div>
           <div class="slide-left">
             <h4>the project</h4>
             <hr>
             <p>This project was a sketch to test out the concept of a &lsquo;Tinder for jobs&rsquo;. The first task was to decide on a name and pull together a logo, which would give us a starting point for the design.</p>
             <p>The name and logo refer to the rare opportunity, the &ldquo;rare bird&rdquo;.</p>
           </div>
-          <img class="responsive" src="http://eringallup.info/name/logo.png">
         </div>
 
         <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/screens/1.png">
+          </div>
           <div class="slide-left">
             <h4>the app : home</h4>
             <hr>
             <p>The app is designed for the job seeker needing a low friction, discrete way of showing interest in new opportunities.
             Upon sign up the user enters the url of their Linkedin profile, which allows the app to scan keywords from their experience to pre-qualify them for posted jobs. </p>
           </div>
-          <img class="responsive" src="http://eringallup.info/name/screens/1.png">
         </div>
 
         <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/screens/3.png">
+          </div>
           <div class="slide-left">
             <h4>the app : preferences</h4>
             <hr>
             <p>The seeker sets their preferences to filter their mandatory requirements like team size, commute time, company type and perks.</p>
           </div>
-          <img class="responsive" src="http://eringallup.info/name/screens/3.png">
         </div>
 
         <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/screens/4.png">
+          </div>
           <div class="slide-left">
             <h4>the app : posted job</h4>
             <hr>
             <p>The user can then browse positions that are a match for them. A short, tidy overview area keeps descriptions succinct. </p>
           </div>
-          <img class="responsive" src="http://eringallup.info/name/screens/4.png">
         </div>
 
         <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/screens/5.png">
+          </div>
           <div class="slide-left">
             <h4>the app : team info</h4>
             <hr>
             <p>Swiping gives more details of the team and office location. </p>
           </div>
-          <img class="responsive" src="http://eringallup.info/name/screens/5.png">
         </div>
 
         <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/screens/6.png">
+          </div>
           <div class="slide-left">
             <h4>the app : projects</h4>
             <hr>
             <p>Instead of responsibilites, projects are listed to give the seeker a more exact idea of what they would be doing.</p>
           </div>
-          <img class="responsive" src="http://eringallup.info/name/screens/6.png">
         </div>
 
         <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/screens/7.png">
+          </div>
           <div class="slide-left">
             <h4>the app : company info</h4>
             <hr>
             <p>Financial information and leadership links allow the user to browse deeper if they'd like to know more about the company.</p>
           </div>
-          <img class="responsive" src="http://eringallup.info/name/screens/7.png">
         </div>
 
         <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/screens/8.png">
+          </div>
           <div class="slide-left">
             <h4>the app : perks</h4>
             <hr>
             <p>Perks include the must-haves already selected by the seeker in preferences.</p>
           </div>
-          <img class="responsive" src="http://eringallup.info/name/screens/8.png">
         </div>
 
         <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/1.png">
+          </div>
           <div class="slide-left">
             <h4>the site</h4>
             <hr>
             <p>Recruiters do much of the work at their desks. Therefore, the MVP would focus only on a desktop site where the recruiter would create their postings.</p>
           </div>
-          <img class="responsive" src="http://eringallup.info/name/1.png">
         </div>
 
         <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/2.png">
+          </div>
           <div class="slide-left">
             <h4>the site: add job</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
           </div>
-          <img class="responsive" src="http://eringallup.info/name/2.png">
         </div>
 
         <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/3.png">
+          </div>
           <div class="slide-left">
             <h4>the site: add job</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
           </div>
-          <img class="responsive" src="http://eringallup.info/name/3.png">
         </div>
 
         <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/4.png">
+          </div>
           <div class="slide-left">
             <h4>the site: add job</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
           </div>
-          <img class="responsive" src="http://eringallup.info/name/4.png">
         </div>
 
       </div>
