finishing rare lead's slideshow

--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -82,9 +82,10 @@
             <img class="responsive" src="http://eringallup.info/name/screens/5.png">
           </div>
           <div class="slide-left">
-            <h4>the app : team info</h4>
+            <h4>the app : swiping up </h4>
             <hr>
-            <p>Swiping gives more details of the team and office location. </p>
+            <p>Swiping up gives more details of the team and office location. </p>
+            <p>Instead of responsibilites, projects are listed to give the seeker a more exact idea of what they would be doing.</p>
           </div>
         </div>
 
@@ -93,48 +94,27 @@
             <img class="responsive" src="http://eringallup.info/name/screens/6.png">
           </div>
           <div class="slide-left">
-            <h4>the app : projects</h4>
+            <h4>the app : company info &amp; perks</h4>
             <hr>
-            <p>Instead of responsibilites, projects are listed to give the seeker a more exact idea of what they would be doing.</p>
+           <p>Financial information and leadership links allow the user to browse deeper if they'd like to know more about the company.</p>
+           <p>Perks include the must-haves already selected by the seeker in preferences.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right">
-            <img class="responsive" src="http://eringallup.info/name/screens/7.png">
-          </div>
-          <div class="slide-left">
-            <h4>the app : company info</h4>
-            <hr>
-            <p>Financial information and leadership links allow the user to browse deeper if they'd like to know more about the company.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right">
-            <img class="responsive" src="http://eringallup.info/name/screens/8.png">
-          </div>
-          <div class="slide-left">
-            <h4>the app : perks</h4>
-            <hr>
-            <p>Perks include the must-haves already selected by the seeker in preferences.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right">
-            <img class="responsive" src="http://eringallup.info/name/1.png">
+            <img class="responsive" src="http://eringallup.info/name/1-1.png">
           </div>
           <div class="slide-left">
             <h4>the site</h4>
             <hr>
-            <p>Recruiters do much of the work at their desks. Therefore, the MVP would focus only on a desktop site where the recruiter would create their postings.</p>
+            <p>Recruiters do much of the work at their desks. Therefore, the MVP would focus only on a desktop site where the recruiter would create their postings and manage communication with interested candidates.</p>
           </div>
         </div>
 
         <div>
           <div class="slide-right">
-            <img class="responsive" src="http://eringallup.info/name/2.png">
+            <img class="responsive" src="http://eringallup.info/name/2-1.png">
           </div>
           <div class="slide-left">
             <h4>the site: add job</h4>
@@ -145,7 +125,7 @@
 
         <div>
           <div class="slide-right">
-            <img class="responsive" src="http://eringallup.info/name/3.png">
+            <img class="responsive" src="http://eringallup.info/name/3-1.png">
           </div>
           <div class="slide-left">
             <h4>the site: add job</h4>
@@ -156,12 +136,111 @@
 
         <div>
           <div class="slide-right">
-            <img class="responsive" src="http://eringallup.info/name/4.png">
+            <img class="responsive" src="http://eringallup.info/name/4-1.png">
           </div>
           <div class="slide-left">
             <h4>the site: add job</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/5-1.png">
+          </div>
+          <div class="slide-left">
+            <h4>the site: add job</h4>
+            <hr>
+            <p>The flow for adding a posting to the system.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/6-1.png">
+          </div>
+          <div class="slide-left">
+            <h4>the site: add job</h4>
+            <hr>
+            <p>The flow for adding a posting to the system.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/7-1.png">
+          </div>
+          <div class="slide-left">
+            <h4>the site: manage postings</h4>
+            <hr>
+            <p>Successfully posted jobs populate the home page.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/8-1.png">
+          </div>
+          <div class="slide-left">
+            <h4>the site: manage postings</h4>
+            <hr>
+            <p>The recruiter is notified when users have expressed interest in their job.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/9-1.png">
+          </div>
+          <div class="slide-left">
+            <h4>the site: new matches</h4>
+            <hr>
+            <p>Drilling into the new interested candidates allows the recruiter to initiate a text conversation...</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/10-1.png">
+          </div>
+          <div class="slide-left">
+            <h4>the site: new matches</h4>
+            <hr>
+            <p>Which they must pay to do.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/11-1.png">
+          </div>
+          <div class="slide-left">
+            <h4>the site: texting a candidate</h4>
+            <hr>
+            <p>Upon payment, the recruiter can text candidates from the desktop site.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/12-1.png">
+          </div>
+          <div class="slide-left">
+            <h4>the site: messages</h4>
+            <hr>
+            <p>The recruiter can manage all of their conversations for a particular job.</p>
+          </div>
+        </div>
+
+        <div>
+          <div class="slide-right">
+            <img class="responsive" src="http://eringallup.info/name/16-1.png">
+          </div>
+          <div class="slide-left">
+            <h4>landing page</h4>
+            <hr>
+            <p>A coordinating landing page would allow for sign ups while the product was built.</p>
           </div>
         </div>
 
