text edits to the slideshow

--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -39,7 +39,7 @@
             <h4>the project</h4>
             <hr>
             <p>This project was a sketch to test out the concept of a &lsquo;Tinder for jobs&rsquo;. The first task was to decide on a name and pull together a logo, which would give us a starting point for the design.</p>
-            <p>The name and logo refer to the rare opportunity, the &ldquo;rare bird&rdquo;.</p>
+            <p>The name and logo are designed to evoke trust and hint at exclusivity.</p>
           </div>
         </div>
 
@@ -51,7 +51,7 @@
             <h4>the app : home</h4>
             <hr>
             <p>The app is designed for the job seeker needing a low friction, discrete way of showing interest in new opportunities.
-            Upon sign up the user enters the url of their Linkedin profile, which allows the app to scan keywords from their experience to pre-qualify them for posted jobs. </p>
+            Upon sign up the user enters the url of their Linkedin profile, which allows the app to scan keywords from their profile to pre-qualify them for posted jobs. </p>
           </div>
         </div>
 
