fixing text in slideshow

--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -60,7 +60,7 @@
             <img class="responsive" src="http://eringallup.info/name/screens/3.png">
           </div>
           <div class="slide-left">
-            <h4>the app : preferences</h4>
+            <h4>preferences</h4>
             <hr>
             <p>The seeker sets their preferences to filter their mandatory requirements like team size, commute time, company type and perks.</p>
           </div>
@@ -71,7 +71,7 @@
             <img class="responsive" src="http://eringallup.info/name/screens/4.png">
           </div>
           <div class="slide-left">
-            <h4>the app : posted job</h4>
+            <h4>posted job</h4>
             <hr>
             <p>The user can then browse positions that are a match for them. A short, tidy overview area keeps descriptions succinct. </p>
           </div>
@@ -82,10 +82,10 @@
             <img class="responsive" src="http://eringallup.info/name/screens/5.png">
           </div>
           <div class="slide-left">
-            <h4>the app : swiping up </h4>
+            <h4>swiping up </h4>
             <hr>
             <p>Swiping up gives more details of the team and office location. </p>
-            <p>Instead of responsibilites, projects are listed to give the seeker a more exact idea of what they would be doing.</p>
+            <p>Instead of responsibilites, projects are listed to give the seeker an exact idea of what they would be doing.</p>
           </div>
         </div>
 
@@ -94,7 +94,7 @@
             <img class="responsive" src="http://eringallup.info/name/screens/6.png">
           </div>
           <div class="slide-left">
-            <h4>the app : company info &amp; perks</h4>
+            <h4>company info &amp; perks</h4>
             <hr>
            <p>Financial information and leadership links allow the user to browse deeper if they'd like to know more about the company.</p>
            <p>Perks include the must-haves already selected by the seeker in preferences.</p>
@@ -117,7 +117,7 @@
             <img class="responsive" src="http://eringallup.info/name/2-1.png">
           </div>
           <div class="slide-left">
-            <h4>the site: add job</h4>
+            <h4>the site : add job</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
           </div>
@@ -128,7 +128,7 @@
             <img class="responsive" src="http://eringallup.info/name/3-1.png">
           </div>
           <div class="slide-left">
-            <h4>the site: add job</h4>
+            <h4>step 2, add projects</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
           </div>
@@ -139,7 +139,7 @@
             <img class="responsive" src="http://eringallup.info/name/4-1.png">
           </div>
           <div class="slide-left">
-            <h4>the site: add job</h4>
+            <h4>step 3, company info</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
           </div>
@@ -150,7 +150,7 @@
             <img class="responsive" src="http://eringallup.info/name/5-1.png">
           </div>
           <div class="slide-left">
-            <h4>the site: add job</h4>
+            <h4>step 4, perks</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
           </div>
@@ -161,7 +161,7 @@
             <img class="responsive" src="http://eringallup.info/name/6-1.png">
           </div>
           <div class="slide-left">
-            <h4>the site: add job</h4>
+            <h4>step 5, keywords</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
           </div>
@@ -172,7 +172,7 @@
             <img class="responsive" src="http://eringallup.info/name/7-1.png">
           </div>
           <div class="slide-left">
-            <h4>the site: manage postings</h4>
+            <h4>success</h4>
             <hr>
             <p>Successfully posted jobs populate the home page.</p>
           </div>
@@ -183,9 +183,9 @@
             <img class="responsive" src="http://eringallup.info/name/8-1.png">
           </div>
           <div class="slide-left">
-            <h4>the site: manage postings</h4>
+            <h4>manage postings</h4>
             <hr>
-            <p>The recruiter is notified when users have expressed interest in their job.</p>
+            <p>The recruiter is notified when users have expressed interest in their job through clicking in the app.</p>
           </div>
         </div>
 
@@ -194,9 +194,9 @@
             <img class="responsive" src="http://eringallup.info/name/9-1.png">
           </div>
           <div class="slide-left">
-            <h4>the site: new matches</h4>
+            <h4>new matches</h4>
             <hr>
-            <p>Drilling into the new interested candidates allows the recruiter to initiate a text conversation...</p>
+            <p>New matches are highlighted, which allow the recruiter to initiate a text conversation...</p>
           </div>
         </div>
 
@@ -205,7 +205,7 @@
             <img class="responsive" src="http://eringallup.info/name/10-1.png">
           </div>
           <div class="slide-left">
-            <h4>the site: new matches</h4>
+            <h4>new matches : payment</h4>
             <hr>
             <p>Which they must pay to do.</p>
           </div>
@@ -216,7 +216,7 @@
             <img class="responsive" src="http://eringallup.info/name/11-1.png">
           </div>
           <div class="slide-left">
-            <h4>the site: texting a candidate</h4>
+            <h4>texting a candidate</h4>
             <hr>
             <p>Upon payment, the recruiter can text candidates from the desktop site.</p>
           </div>
@@ -227,7 +227,7 @@
             <img class="responsive" src="http://eringallup.info/name/12-1.png">
           </div>
           <div class="slide-left">
-            <h4>the site: messages</h4>
+            <h4>messages</h4>
             <hr>
             <p>The recruiter can manage all of their conversations for a particular job.</p>
           </div>
