--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <link rel="shortcut icon" type="../image/x-icon" href="/favicon.ico">
   <title>Erin Gallup | User Focused Product Design</title>
+  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
   <link rel="stylesheet" type="text/css" href="../css/screenstyle.css" />
   <link rel="stylesheet" type="text/css" href="../css/screen-layout-large.css" />
-  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
 </head>
 <body class="clearfix">
 
@@ -26,16 +27,16 @@
     <h5>passive job seekers</h5>
     <h6>view slides</h6>
   </div>
-  <div class="modal">
+  <div class="eg-modal">
     <span class="close close-modal"></span>
-    <div class="modal-body">
-      <div class="slideshow">
+    <div class="eg-modal-body container">
+      <div class="slideshow row">
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive center" src="http://eringallup.info/name/logo.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>the project</h4>
             <hr>
             <p>This project was a sketch to test out the concept of a &lsquo;Tinder for jobs&rsquo;. The first task was to decide on a name and pull together a logo, which would give us a starting point for the design.</p>
@@ -44,10 +45,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/screens/1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>the app : home</h4>
             <hr>
             <p>The app is designed for the job seeker needing a low friction, discrete way of showing interest in new opportunities.
@@ -56,10 +57,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/screens/3.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>preferences</h4>
             <hr>
             <p>The seeker sets their preferences to filter their mandatory requirements like team size, commute time, company type and perks.</p>
@@ -67,10 +68,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/screens/4.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>posted job</h4>
             <hr>
             <p>The user can then browse positions that are a match for them. A short, tidy overview area keeps descriptions succinct. </p>
@@ -78,10 +79,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/screens/5.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>swiping up </h4>
             <hr>
             <p>Swiping up gives more details of the team and office location. </p>
@@ -90,10 +91,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/screens/6.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>company info &amp; perks</h4>
             <hr>
            <p>Financial information and leadership links allow the user to browse deeper if they'd like to know more about the company.</p>
@@ -102,10 +103,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/1-1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>the site</h4>
             <hr>
             <p>Recruiters do much of the work at their desks. Therefore, the MVP would focus only on a desktop site where the recruiter would create their postings and manage communication with interested candidates.</p>
@@ -113,10 +114,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/2-1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>the site : add job</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
@@ -124,10 +125,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/3-1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>step 2, add projects</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
@@ -135,10 +136,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/4-1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>step 3, company info</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
@@ -146,10 +147,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/5-1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>step 4, perks</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
@@ -157,10 +158,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/6-1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>step 5, keywords</h4>
             <hr>
             <p>The flow for adding a posting to the system.</p>
@@ -168,10 +169,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/7-1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>success</h4>
             <hr>
             <p>Successfully posted jobs populate the home page.</p>
@@ -179,10 +180,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/8-1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>manage postings</h4>
             <hr>
             <p>The recruiter is notified when users have expressed interest in their job through clicking in the app.</p>
@@ -190,10 +191,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/9-1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>new matches</h4>
             <hr>
             <p>New matches are highlighted, which allow the recruiter to initiate a text conversation...</p>
@@ -201,10 +202,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/10-1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>new matches : payment</h4>
             <hr>
             <p>Which they must pay to do.</p>
@@ -212,10 +213,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/11-1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>texting a candidate</h4>
             <hr>
             <p>Upon payment, the recruiter can text candidates from the desktop site.</p>
@@ -223,10 +224,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/12-1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>messages</h4>
             <hr>
             <p>The recruiter can manage all of their conversations for a particular job.</p>
@@ -234,10 +235,10 @@
         </div>
 
         <div>
-          <div class="slide-right">
+          <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="http://eringallup.info/name/16-1.png">
           </div>
-          <div class="slide-left">
+          <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>landing page</h4>
             <hr>
             <p>A coordinating landing page would allow for sign ups while the product was built.</p>
@@ -249,18 +250,81 @@
   </div>
 </div>
 
-<div class="body-container">
-  <div class="body-left">
-    <div class="body-title">
-      <h3>Who are</h3>
-      <h4>passive job seekers?</h4>
+<div class="body-container container">
+  <div class="row">
+    <div class="body-left col-sm-4">
+      <div class="body-title">
+        <h3>Who are</h3>
+        <h4>passive job seekers?</h4>
+      </div>
     </div>
-  </div>
-  <div class="body-right">
-    <p>The passive job seeker is a skilled employee who is starting to feel that the next job is on the horizon. They are busy and do not have the time to comb job sites and wade through cryptic job descriptions. They only want to see the jobs that they'd leave their current job for. And most of all, they do not want to be approached by recruiters &ndash; unless  it is a true match.</p>
+    <div class="body-right col-sm-7 col-sm-offset-1">
+      <p>The passive job seeker is a skilled employee who is starting to feel that the next job is on the horizon. They are busy and do not have the time to comb job sites and wade through cryptic job descriptions. They only want to see the jobs that they'd leave their current job for. And most of all, they do not want to be approached by recruiters &ndash; unless  it is a true match.</p>
+    </div>
   </div>
 </div>
 
+<div class="project container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h4 class="project-title">The Project</h4>
+      <p class="lead">Create a system that reduces prospecting friction for passive job seekers.</p>
+    </div>
+  </div>
+  <div class="row project-items match-height distribute">
+    <div class="project-item col-sm-3">
+      <div class="project-item-top" style="padding-top: 30px;"><img class="responsive" src="../images/rarelead-logo.png"></div>
+      <h5>Logo</h5>
+      <p>Starts visual design and branding</p>
+    </div>
+    <div class="project-item col-sm-3">
+      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/screens/4.png"></div>
+      <h5>App</h5>
+      <p>Allows seekers to qualify themselves and show interest</p>
+    </div>
+    <div class="project-item col-sm-3">
+      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/7-1.png"></div>
+      <h5>Site</h5>
+      <p>Allows recruiters to post jobs and contact prospects</p>
+    </div>
+    <div class="project-item col-sm-3">
+      <div class="project-item-top"><img class="responsive outline" src="http://eringallup.info/name/16-1.png"></div>
+      <h5>Lander</h5>
+      <p>Tests user interest while site is created</p>
+    </div>
+  </div>
+</div>
+
+<div class="details container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h4 class="details-title">Details</h4>
+    </div>
+  </div>
+  <div class="row details-items match-height distribute">
+    <div class="details-item col-sm-3">
+      <h5>Project Type</h5>
+      <p>proof of concept</p>
+    </div>
+    <div class="details-item col-sm-3">
+      <h5>Timeframe</h5>
+      <p>2 weeks</p>
+    </div>
+    <div class="details-item col-sm-3">
+      <h5>Team</h5>
+      <ul class="list-unstyled">
+        <li>product manager</li>
+        <li>me</li>
+      </ul>
+    </div>
+    <div class="details-item col-sm-3">
+      <h5>Outcome</h5>
+      <p>prototypes</p>
+    </div>
+  </div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script src="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js" type="text/javascript"></script>
 <script src="../js/app.js" type="text/javascript"></script>
